# pythonFLEX

./: .gitignore  LICENSE  README.md  pyproject.toml  todo.txt
src/pythonflex/: __init__.py  analysis.py  logging_config.py  plotting.py  preprocessing.py  utils.py
src/pythonflex/data/dataset/: liver_cell_lines_500_genes.csv  melanoma_cell_lines_500_genes.csv  neuroblastoma_cell_lines_500_genes.csv
src/pythonflex/data/gold_standard/: CORUM.parquet  GOBP.parquet  PATHWAY.parquet  corum.csv  gobp.csv  pathway.csv
src/pythonflex/examples/: basic_usage.py  dataset_filtering.py  test.py
test/: test_corrected_auc.py  test_inputs.py
